--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -24,7 +24,12 @@
             <img src="/kakao_login_large_narrow.png" alt="카카오 로그인">
         </a>
     </div>
+    <div class="login-section">
+        <h2>네이버 로그인</h2>
+        <a href="/oauth2/authorization/naver">
+            <img src="/naver_login_large_narrow.png" alt="네이버 로그인">
+        </a>
+    </div>
 </div>
-<script src="scripts.js"></script>
 </body>
 </html>
