--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -30,6 +30,12 @@
             <img src="/naver_login_large_narrow.png" alt="네이버 로그인">
         </a>
     </div>
+    <div class="login-section">
+        <h2>구글 로그인</h2>
+        <a href="/oauth2/authorization/google">
+            <img src="/google_login_large_narrow.png" alt="네이버 로그인">
+        </a>
+    </div>
 </div>
 </body>
 </html>
