--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -36,6 +36,12 @@
             <img src="/google_login_large_narrow.png" alt="네이버 로그인">
         </a>
     </div>
+    <div class="login-section">
+        <h2>페이스북 로그인</h2>
+        <a href="/oauth2/authorization/facebook">
+            <img src="/facebook_login_large_narrow.png" alt="네이버 로그인">
+        </a>
+    </div>
 </div>
 </body>
 </html>
