:white_check_mark: 깃허브 로그인 구현 완료 및 성공

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -42,6 +42,12 @@
             <img src="/facebook_login_large_narrow.png" alt="네이버 로그인">
         </a>
     </div>
+    <div class="login-section">
+        <h2>깃허브 로그인</h2>
+        <a href="/oauth2/authorization/github">
+            <img src="/github_login_large_narrow.png" alt="네이버 로그인">
+        </a>
+    </div>
 </div>
 </body>
 </html>
