:white_check_mark: 이미지 파일 추가

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -21,31 +21,31 @@
     <div class="login-section">
         <h2>카카오 로그인</h2>
         <a href="/oauth2/authorization/kakao">
-            <img src="/kakao_login_large_narrow.png" alt="카카오 로그인">
+            <img src="/kakao.png" alt="카카오 로그인">
         </a>
     </div>
     <div class="login-section">
         <h2>네이버 로그인</h2>
         <a href="/oauth2/authorization/naver">
-            <img src="/naver_login_large_narrow.png" alt="네이버 로그인">
+            <img src="/naver.png" alt="네이버 로그인">
         </a>
     </div>
     <div class="login-section">
         <h2>구글 로그인</h2>
         <a href="/oauth2/authorization/google">
-            <img src="/google_login_large_narrow.png" alt="네이버 로그인">
+            <img src="/google.png" alt="구글 로그인">
         </a>
     </div>
     <div class="login-section">
         <h2>페이스북 로그인</h2>
         <a href="/oauth2/authorization/facebook">
-            <img src="/facebook_login_large_narrow.png" alt="네이버 로그인">
+            <img src="/facebook.png" alt="페이스북 로그인">
         </a>
     </div>
     <div class="login-section">
         <h2>깃허브 로그인</h2>
         <a href="/oauth2/authorization/github">
-            <img src="/github_login_large_narrow.png" alt="네이버 로그인">
+            <img src="/github.png" alt="깃허브 로그인">
         </a>
     </div>
 </div>
