--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -9,7 +9,6 @@
 <div class="container">
     <h1>로그인</h1>
     <div class="login-section">
-        <h2>일반 로그인</h2>
         <form id="login-form">
             <label for="uid">아이디:</label>
             <input type="text" id="uid" name="uid" required>
@@ -19,33 +18,28 @@
         </form>
     </div>
     <div class="login-section">
-        <h2>카카오 로그인</h2>
         <a href="/oauth2/authorization/kakao">
-            <img src="/kakao.png" alt="카카오 로그인">
+            <img src="/image/kakao.png" alt="카카오 로그인">
         </a>
     </div>
     <div class="login-section">
-        <h2>네이버 로그인</h2>
         <a href="/oauth2/authorization/naver">
-            <img src="/naver.png" alt="네이버 로그인">
+            <img src="/image/naver.png" alt="네이버 로그인">
         </a>
     </div>
     <div class="login-section">
-        <h2>구글 로그인</h2>
         <a href="/oauth2/authorization/google">
-            <img src="/google.png" alt="구글 로그인">
+            <img src="/image/google.png" alt="구글 로그인">
         </a>
     </div>
     <div class="login-section">
-        <h2>페이스북 로그인</h2>
         <a href="/oauth2/authorization/facebook">
-            <img src="/facebook.png" alt="페이스북 로그인">
+            <img src="/image/facebook.png" alt="페이스북 로그인">
         </a>
     </div>
     <div class="login-section">
-        <h2>깃허브 로그인</h2>
         <a href="/oauth2/authorization/github">
-            <img src="/github.png" alt="깃허브 로그인">
+            <img src="/image/github.png" alt="깃허브 로그인">
         </a>
     </div>
 </div>
